...
    isSelectionModeActive,
    onLongPressItem,
    selectionChrome,
  } = recentJournalEntries;

  return (
    <ScreenWithChrome testID="dashboard-screen" edges={['top']} chrome={chrome}>
      <View style={styles.container}>
        <JournalEntryListView
          ref={listRef}
          items={items}
          isLoading={isLoading}
          isLoadingMore={isLoadingMore}
...
