...
        }}
      />
      <Tabs.Screen
        name="accounts"
        options={{
          title: 'Accounts',
          tabBarButtonTestID: 'tab-accounts',
          tabBarIcon: ({ color, size, focused }) => (
            <AppIcon
              name={Icon.Wallet}
              size={size}
              color={color as string}
              strokeWidth={focused ? 2.5 : 2}
...
